add some correct in layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,16 @@
     <EditText
         android:id="@+id/et_oper1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:hint="Enter number"/>
 
     <EditText
         android:id="@+id/et_oper2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:hint="Enter number"/>
 
     <TextView
         android:id="@+id/tv_result"
